2012-10-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* configure.ac: Set to 0.99.1pre, as
	0.99.1 will now be next release.
	* NEWS: Updated with last bug fix
	and 0.99.1

2012-10-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/54931
	* m4/acinclude.m4:
	(CLASSPATH_WITH_GJDOC): Allow GJDoc versions
	included with GNU Classpath to be used to
	build (0.98 on).

2012-03-15  Pekka Enberg  <penberg@kernel.org>

	* java/util/Formatter.java:
	(icharacterFormat(Object,int,int,int,char):
	Fix NullPointerException for null characters.
	(basicIntegralConversion(Object, int, int, int, int, char):
	Fix NullPointerException for null integers.
	(format(Locale, String, Object...)):
	Fix NullPointerException for null object.

2012-03-15  Pekka Enberg  <penberg@kernel.org>

	* java/lang/String.java:
	(codePointAt(int))): Fix exception type.
	(codePointBefore(int)): Fix exception type.

2011-07-20  Ivan Maidanski  <ivmai@mail.ru>

	* native/jni/java-util/java_util_VMTimeZone.c:
	Include jcl.h file.
	(Java_java_util_VMTimeZone_getSystemTimeZoneId(JNIEnv*,jclass)):
	Throw OutOfMemoryException in case of malloc() failure.

2012-06-10  Ivan Maidanski  <ivmai@mail.ru>

	* compat/.gitignore,
	* compat/java.net/.gitignore,
	* doc/.gitignore,
	* doc/api/.gitignore,
	* doc/www.gnu.org/.gitignore,
	* doc/www.gnu.org/announce/.gitignore,
	* doc/www.gnu.org/cp-tools/.gitignore,
	* doc/www.gnu.org/docs/.gitignore,
	* doc/www.gnu.org/downloads/.gitignore,
	* doc/www.gnu.org/events/.gitignore,
	* doc/www.gnu.org/faq/.gitignore,
	* examples/.gitignore,
	* external/.gitignore,
	* external/jsr166/.gitignore,
	* external/relaxngDatatype/.gitignore,
	* external/sax/.gitignore,
	* external/w3c_dom/.gitignore,
	* gnu/classpath/.gitignore,
	* gnu/java/locale/.gitignore,
	* gnu/java/security/.gitignore,
	* gnu/test/.gitignore,
	* include/.gitignore,
	* java/util/.gitignore,
	* lib/.gitignore,
	* native/.gitignore,
	* native/fdlibm/.gitignore,
	* native/jawt/.gitignore,